--- a/index.css
+++ b/index.css
@@ -1,10 +1,9 @@
-
 .intro {
 	margin: 30px 0px;
 	font-weight: bold;
 }
 
-h1 {
+.headline {
 	color: #99CCBB;
 	text-transform: uppercase;
 	font-weight: 800;
@@ -43,11 +42,6 @@ p {
 	border-radius: 5px;
 	color: #fff;
 	background-color: #99CCBB;
-	transition: all 0.75s ease;
-	-webkit-transition: all 0.75s ease;
-	-moz-transition: all 0.75s ease;
-	-ms-transition: all 0.75s ease;
-	-o-transition: all 0.75 ease;
 	font-weight: normal;
 }
 
@@ -89,10 +83,15 @@ li > button {
 	background: none;
 	border: none;
 	float: right;
-	color: #025f70;
+	color: rgb(75, 100, 92);
 	font-weight: 800;
 }
  
+
+input, button {
+	outline: none;
+  }
+
 
 input {
 	border-radius: 5px;
@@ -162,3 +161,188 @@ button:focus {outline:0;}
 
 
 
+
+
+/* The Modal (background) */
+.modal {
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	padding-top: 100px; /* Location of the box */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+.text {
+	color: #413c3c;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+
+  /* Modal Content */
+  .modal-content {
+	position: relative;
+	background-color: #e0bebe;
+	margin: auto;
+	padding: 0;
+	border: none;
+	width: 80%;
+	height: 200px;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+	text-align: center;
+	/* color: #413c3c; */
+	-webkit-animation-name: animatetop;
+	-webkit-animation-duration: 0.4s;
+	animation-name: animatetop;
+	animation-duration: 0.4s;
+	margin-top: 30px;
+  }
+
+.header-text {
+	margin-top: 20px;
+	color: bisque;
+	text-transform: uppercase;
+
+}
+  
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+	from {top:-300px; opacity:0} 
+	to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+	from {top:-300px; opacity:0}
+	to {top:0; opacity:1}
+  }
+ 
+  /* The Close Button */
+  .close {
+	color: white;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+	color: #000;
+	text-decoration: none;
+	cursor: pointer;
+  } 
+  
+  .modal-body {
+	padding: 2px 16px;
+	margin-top: 30px;
+}
+
+
+.button-div {
+	width: 200px;
+	text-align: center;
+	background: #e0bebe;
+	position: fixed;
+	top: 250px;
+	left: 0;
+	z-index: 9999;
+	font-size: 10px;
+	line-height: 20px;
+	padding: 20px;
+	opacity: 0.98;
+}
+  
+.div-text {
+	color: #fff;
+}
+
+#myBtn {
+	border-radius: 5px;
+	width: 170px;
+	background-color: #99CCBB;
+	color: white;
+	padding: 5px;
+	margin-top: 20px;
+	margin-left: 0px;
+	border: none;
+	outline: 0 none;
+	top: 150px;
+	left: 0;
+  }
+
+  #myBtn:hover {
+	  background: rgb(96, 143, 129);
+	  color: #fff;
+  }
+
+  .button1, .button2 {
+	width: 100px;
+	margin-bottom: 10px;
+	border: none;
+	padding: 5px 15px;
+	border-radius: 5px;
+	color: rgb(184, 183, 183);
+	background-color: #fff;
+	font-weight: normal;
+}
+
+.button1:hover, .button2:hover {
+	background-color: rgb(184, 183, 183);
+	color: #fff;
+	}
+	
+
+
+
+
+  /* #cookie-popup {
+	width: 200px;
+	text-align: center;
+	background: #e0bebe;
+	position: fixed;
+	top: 150px;
+	left: 0;
+	z-index: 9999;
+	font-size: 10px;
+	line-height: 20px;
+	padding: 20px;
+	opacity: 0.98;
+}
+
+#cookie-popup p {
+	font-size: 11pt;
+	font-weight: 300;
+	color: #413c3c;
+	margin-top: 10px;
+	margin-bottom: 30px;
+}
+
+#button1, #button2 {
+	width: 100px;
+	margin-bottom: 10px;
+	border: none;
+	padding: 5px 15px;
+	border-radius: 5px;
+	color: rgb(184, 183, 183);
+	background-color: #fff;
+	font-weight: normal;
+}
+
+#button1:hover, #button2:hover {
+background-color: rgb(184, 183, 183);
+color: #fff;
+}
+
+
+
+.hinweis span {
+	font-size: 22pt;
+	font-weight: 300;
+	color: bisque;
+	text-transform: uppercase;
+} */
