--- a/index.css
+++ b/index.css
@@ -165,17 +165,17 @@ button:focus {outline:0;}
 
 /* The Modal (background) */
 .modal {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
-	padding-top: 100px; /* Location of the box */
+	display: none; 
+	position: fixed; 
+	z-index: 1; 
+	padding-top: 100px; 
 	left: 0;
 	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	width: 100%; 
+	height: 100%; 
+	overflow: auto; 
+	background-color: rgb(0,0,0); 
+	background-color: rgba(0,0,0,0.4); 
   }
   
 .text {
@@ -298,51 +298,3 @@ button:focus {outline:0;}
 	
 
 
-
-
-  /* #cookie-popup {
-	width: 200px;
-	text-align: center;
-	background: #e0bebe;
-	position: fixed;
-	top: 150px;
-	left: 0;
-	z-index: 9999;
-	font-size: 10px;
-	line-height: 20px;
-	padding: 20px;
-	opacity: 0.98;
-}
-
-#cookie-popup p {
-	font-size: 11pt;
-	font-weight: 300;
-	color: #413c3c;
-	margin-top: 10px;
-	margin-bottom: 30px;
-}
-
-#button1, #button2 {
-	width: 100px;
-	margin-bottom: 10px;
-	border: none;
-	padding: 5px 15px;
-	border-radius: 5px;
-	color: rgb(184, 183, 183);
-	background-color: #fff;
-	font-weight: normal;
-}
-
-#button1:hover, #button2:hover {
-background-color: rgb(184, 183, 183);
-color: #fff;
-}
-
-
-
-.hinweis span {
-	font-size: 22pt;
-	font-weight: 300;
-	color: bisque;
-	text-transform: uppercase;
-} */
